Fri Sep 25 04:38:49 GMT 2015  Olly Betts <olly@survex.com>

	* docs/stemming.rst: Update snowball website link to snowballstem.org.

Sun Aug 30 04:43:49 GMT 2015  Olly Betts <olly@survex.com>

	* docs/remote_protocol.rst: Markup tweak.

Fri Sep 25 04:27:46 GMT 2015  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.cc: Improve error when the client and
	  server remote protocol versions aren't compatible.

Fri Sep 25 04:23:38 GMT 2015  Olly Betts <olly@survex.com>

	* docs/: Strip out "quickstart" examples which are out of date and
	  rather redundant with the "simple" examples.

Fri Sep 25 04:21:03 GMT 2015  Olly Betts <olly@survex.com>

	* pkgconfig/xapian-core.pc.in: Fix library name in .pc file to say
	  "xapian" not "xapian-core".  Reported by Eric Lindblad to the
	  xapian-devel list.

Fri Sep 25 04:18:08 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_compact.cc: Need <unistd.h> for unlink() on
	  FreeBSD, reported by Germán M. Bravo via github PR 72.

Fri Sep 25 04:14:53 GMT 2015  Olly Betts <olly@survex.com>

	* tests/harness/testutils.cc,tests/harness/testutils.h: Use
	  'Xapian::docid' instead of 'unsigned int' so that things work with
	  64 bit docids (see #385).

Fri Sep 25 01:16:32 GMT 2015  Olly Betts <olly@survex.com>

	* common/safeunistd.h,configure.ac: Don't provide our own
	  implementation of sleep() under __WIN32__ if there's already one -
	  mingw provides one, and in some situations it seems to clash with
	  ours.  Reported to xapian-discuss by John Alveris.

Fri Sep 25 01:13:59 GMT 2015  Olly Betts <olly@survex.com>

	* net/remoteserver.cc: Check length of key in MSG_SETMETADATA.

Fri Sep 25 00:05:00 GMT 2015  Olly Betts <olly@survex.com>

	* examples/xapian-metadata.cc: Extend "list" subcommand to take
	  optional key prefix.

Fri Sep 25 00:03:37 GMT 2015  Olly Betts <olly@survex.com>

	* common/remote-database.h: Correct doxygen comment for internal
	  method.
